--- a/Lienol_OpenWrt_HC5962.config
+++ b/Lienol_OpenWrt_HC5962.config
@@ -107,9 +107,10 @@ CONFIG_PACKAGE_ntfs-3g=y
 CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_p910nd=y
 CONFIG_PACKAGE_samba36-server=y
+#-----------------------去掉非必须依赖-------------------------------
 #CONFIG_PACKAGE_shadowsocks-libev-config=y
 #CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
-CONFIG_PACKAGE_trojan=y
+#CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_vsftpd-alt=y
