--- a/.github/workflows/Lienol_OpenWrt_HC5962.yml
+++ b/.github/workflows/Lienol_OpenWrt_HC5962.yml
@@ -6,7 +6,7 @@
 # Blog: https://p3terx.com
 #=================================================
 
-name: Build Lienol_OpenWrt_HC5962_Master
+name: Build Lienol_OpenWrt_HC5962
 
 on:
   repository_dispatch:
