--- a/Lienol_OpenWrt_HC5962.config
+++ b/Lienol_OpenWrt_HC5962.config
@@ -120,3 +120,13 @@ CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
 CONFIG_boost-variant-release=y
+#添加流量控制
+CONFIG_PACKAGE_luci-app-sqm=y
+#网络设置向导
+CONFIG_PACKAGE_luci-app-meshwizard=y
+#Polipo代理(是一个小型且快速的网页缓存代理)
+CONFIG_PACKAGE_luci-app-polipo=y
+#Client-Splash是无线MESH网络的一个热点认证系统
+CONFIG_PACKAGE_luci-app-splash=y
+#WiFi无线
+CONFIG_PACKAGE_luci-app-wireless-regdb=y
