--- a/.github/workflows/Build Lean_LEDE_B70.yml
+++ b/.github/workflows/Build Lean_LEDE_B70.yml
@@ -18,7 +18,7 @@ on:
     paths:
       - 'Lean_LEDE_B70.config'
   schedule:
-    - cron: 0 6 1/3 * *
+    - cron: 0 19 * * *
   watch:
     types: started
 
