--- a/.github/workflows/Lienol_OpenWrt_HC5962.yml
+++ b/.github/workflows/Lienol_OpenWrt_HC5962.yml
@@ -24,7 +24,7 @@ on:
 
 env:
   REPO_URL: https://github.com/Lienol/openwrt
-  REPO_BRANCH: dev-19.07
+  REPO_BRANCH: dev-19.07-5.4
   CONFIG_FILE: Lienol_OpenWrt_HC5962.config
   DIY_SH: diy.sh
   SSH_ACTIONS: false
