--- a/.github/workflows/Build Lean_LEDE_B70_NANO.yml
+++ b/.github/workflows/Build Lean_LEDE_B70_NANO.yml
@@ -16,7 +16,7 @@ on:
     branches:
       - master
     paths:
-      - 'Lean_LEDE_B70.config'
+      - 'Lean_LEDE_B70_NANO.config'
   schedule:
     - cron: 0 19 * * *
   watch:
