--- a/.github/workflows/Build Lienol_OpenWrt_HC5962_5.4.yml
+++ b/.github/workflows/Build Lienol_OpenWrt_HC5962_5.4.yml
@@ -6,7 +6,7 @@
 # Blog: https://p3terx.com
 #=================================================
 
-name: Build Lienol_OpenWrt_HC5962
+name: Build Lienol_OpenWrt_HC5962_5.4
 
 on:
   repository_dispatch:
@@ -23,7 +23,7 @@ on:
     types: started
 env:
   REPO_URL:  https://github.com/Lienol/openwrt
-  REPO_BRANCH: dev-19.07
+  REPO_BRANCH: dev-master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: Lienol_OpenWrt_HC5962.config
   DIY_P1_SH: diy-part1.sh
