--- a/.github/workflows/Lean_LEDE_B70.yml
+++ b/.github/workflows/Lean_LEDE_B70.yml
@@ -3,10 +3,11 @@
 # Description: Build OpenWrt using GitHub Actions
 # Lisence: MIT
 # Author: P3TERX
+# 5.4内核固件生成
 # Blog: https://p3terx.com
 #=================================================
 
-name: Build Lienol_HC5962_OpenClash
+name: Build Lean_LEDE_B70
 
 on:
   repository_dispatch:
@@ -16,16 +17,17 @@ on:
     branches:
       - master
     paths:
-      - 'Lienol_OpenWrt_HC5962.config'
+      - 'Lean_LEDE_B70.config'
   schedule:
     - cron: 0 19 * * *
   watch:
     types: started
+
 env:
-  REPO_URL:  https://github.com/Lienol/openwrt
-  REPO_BRANCH: dev-19.07
+  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: Lienol_OpenWrt_HC5962.config
+  CONFIG_FILE: Lean_LEDE_B70.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   SSH_ACTIONS: false
@@ -149,4 +151,3 @@ jobs:
         curl -fsSL git.io/file-transfer | sh
         ./transfer wet -s -p 16 --no-progress ${FIRMWARE} 2>&1 | tee wetransfer.log
         echo "::warning file=wetransfer.com::$(cat wetransfer.log | grep https)"
-
