--- a/.github/workflows/Build Lienol_HC5962_19_07.yml
+++ b/.github/workflows/Build Lienol_HC5962_19_07.yml
@@ -22,7 +22,7 @@ on:
   watch:
     types: started
 env:
-  REPO_URL:  https://github.com/Lienol/openwrt
+  REPO_URL:  https://github.com/whjddzyx/Lienol
   REPO_BRANCH: dev-19.07
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: Lienol_OpenWrt_HC5962.config
