--- a/.github/workflows/Build Lienol_HC5962_19_07.yml
+++ b/.github/workflows/Build Lienol_HC5962_19_07.yml
@@ -17,10 +17,10 @@ on:
       - master
     paths:
       - 'Lienol_OpenWrt_HC5962.config'
-  schedule:
-    - cron: 0 19 * * *
-  watch:
-    types: started
+  #schedule:
+   # - cron: 0 19 * * *
+  #watch:
+  #  types: started
 env:
   REPO_URL:  https://github.com/whjddzyx/Lienol
   REPO_BRANCH: dev-19.07
