--- a/.github/workflows/Lean_LEDE_B70_NANO.yml
+++ b/.github/workflows/Lean_LEDE_B70_NANO.yml
@@ -15,11 +15,11 @@ on:
     types: published
   push:
     branches:
-      - master
+      - 20200416
     paths:
       - 'Lean_LEDE_B70.config'
-  schedule:
-    - cron: 0 19 * * *
+  #schedule:
+   # - cron: 0 19 * * *
   watch:
     types: started
 
