--- a/.github/workflows/Lean_LEDE_B70.yml
+++ b/.github/workflows/Lean_LEDE_B70.yml
@@ -25,7 +25,7 @@ on:
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
+  REPO_BRANCH: 20200416
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: Lean_LEDE_B70.config
   DIY_P1_SH: diy-part1.sh
