--- a/.github/workflows/Lean_LEDE_B70.yml
+++ b/.github/workflows/Lean_LEDE_B70.yml
@@ -15,9 +15,9 @@ on:
     types: published
   push:
     branches:
-      - 20200416
+      - master
     paths:
-      - 'Lean_LEDE_B70.config'
+      - '8820s.config'
   #schedule:
    # - cron: 0 19 * * *
   watch:
@@ -27,7 +27,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: 20200416
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: Lean_LEDE_B70.config
+  CONFIG_FILE: 8820s.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   SSH_ACTIONS: false
