--- a/Lienol_OpenWrt_HC5962.config
+++ b/Lienol_OpenWrt_HC5962.config
@@ -117,7 +117,7 @@ CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
 CONFIG_boost-variant-release=y
-#添加流量控制--------------
+#添加流量控制-------------------
 CONFIG_PACKAGE_luci-app-sqm=y
 #Polipo代理(是一个小型且快速的网页缓存代理)
 CONFIG_PACKAGE_luci-app-polipo=y
